--- a/Adventure.html
+++ b/Adventure.html
@@ -144,7 +144,6 @@ var incomeText;
 var currentEnemy;
 var curr;
 var enemiesMoving;
-var currMove = 0;
 
 //These objects store the stats for each unit, as well as the display images, and their cost to produce
 var infantry = {attack: 3, defense: 3, movement: 3, sight: 3, image: "soldier.png", movedImage: "soldierMoved.png", enemyImage: "soldierEnemy.png", name: "Light Infantry", cost: 300};
@@ -572,7 +571,7 @@ function updateGameArea() { //Called to draw each new frame on the canvas
 	}
 	
 	if (delay < 0 && enemiesMoving && currentEnemy < enemyUnits.length) {
-		enemyMove();
+		executeMoves();
 	}
 	else if (currentEnemy == enemyUnits.length)
 		enemiesMoving = 0;
@@ -841,7 +840,7 @@ function clicked(event) { //called any time the user clicks
 }
 
 function highlightMoveable(x, y) {
-	getMoveable(x,y); //create a 2D array representing the board, that contains info on whether we can move to a square for each location on the board
+	getMoveable(x,y,selectedUnit); //create a 2D array representing the board, that contains info on whether we can move to a square for each location on the board
 
 	for (var i = 0; i < boardRows; i++) {
 		for (var j = 0; j < boardCols; j++) { //for each square on the board that is moveable, highlight it with a semi-transparent blue square
@@ -855,8 +854,11 @@ function highlightMoveable(x, y) {
 	highlightAttackable(); //now highlight squares we can attack
 }
 
-function getMoveable(givenX,givenY) {
-	var potentialMoveable = {movement: unitMoved[selectedUnit], x: givenX, y: givenY}; //create our starting point, the units location
+function getMoveable(givenX,givenY, unit) {
+	if (unit > -1) //if its a friendly unit
+		var potentialMoveable = {movement: unitMoved[unit], x: givenX, y: givenY}; //create our starting point, the units location
+	else //if enemy unit
+		var potentialMoveable = {movement: enemyUnits[(unit*-1)-2].stats.movement, x: givenX, y: givenY};
 	moveableSpaces = [potentialMoveable]; //make our list of spaces we can move to just our starting point
 	moveableGrid = []; //reset moveableGrid to empty
 	expandMoveable(); //fills moveableSpaces[] with a space object(x cord, y cord, and movement cost to get there) for every square this unit could move to
@@ -1010,9 +1012,11 @@ function makeMoves (x,y,given) { //should probably be renamed, works backwards t
 		
 		moves.push([moves[moves.length-1][0]+selected[0],moves[moves.length-1][1]+selected[1]]); //whichever one we found to be fastest we put on the end of the list
 	}
-
-	for (var i = 0; i < moves.length-1; i++) { //for each move on our list
-		drawPath(i); //assign the right image for when we display the path
+	
+	if (!enemiesMoving) { //enemies don't need path ui
+		for (var i = 0; i < moves.length-1; i++) { //for each move on our list
+			drawPath(i); //assign the right image for when we display the path
+		}
 	}
 }
 
@@ -1070,8 +1074,10 @@ function moveOver() {
 	if (forceClickX == moves[0][0] && forceClickY == moves[0][1]) //this is the case where a unit has moved and now will want to attack
 		clicked(event);
 	moves = []; //reset everything
-	if (!unitMoved[selectedUnit]) //if we don't need to make an attack after this
+	if (!enemiesMoving && !unitMoved[selectedUnit]) //if we don't need to make an attack after this
 		playerUnits[selectedUnit].image.src = playerUnits[selectedUnit].stats.movedImage; //make our unit show that its done moving 
+	if (enemiesMoving) 
+		enemyMove();
 }
 
 function isAttackable(givenX, givenY) { //returns whether space can be attacked 
@@ -1130,20 +1136,29 @@ function enemyTurn () { //Called when the enemy turn starts
 }
 
 function enemyMove () { //called each time an enemy makes a move (once per space)
-	if (currMove <= 0) { //if the last unit is out of moves go to the next unit
-		currentEnemy++;
-		curr = enemyUnits[currentEnemy];
-		currMove = curr.stats.movement; 
-	}
-	else {
-		moves = [[toSpace(curr.x,globalOffsetX)-1,toSpace(curr.y,globalOffsetY)],[toSpace(curr.x,globalOffsetX),toSpace(curr.y,globalOffsetY)]]; //move one to the right (should be replaced by some kind of AI pathing functino)
-		moveParams = [toSpace(curr.x,globalOffsetX),toSpace(curr.y,globalOffsetY),curr,moves.length-1];
-		currMove = currMove - terrainCost[board[moves[0][0]][moves[0][1]]]; //subtract the terrain cost
-		if (entityLayer[moves[0][0]][moves[0][1]] == -1) { //only make the move if we won't stack
-			entityLayer[moves[moves.length-1][0]][moves[moves.length-1][1]] = -1;
-			executeMoves();
+	currentEnemy++;
+	curr = enemyUnits[currentEnemy];
+
+	getMoveable(toSpace(curr.x,globalOffsetX),toSpace(curr.y,globalOffsetY),(currentEnemy*-1)-2);
+	var destination = getDestination();
+	makeMoves(destination[0],destination[1],curr); 
+	entityLayer[moves[moves.length-1][0]][moves[moves.length-1][1]] = -1; //the space the unit moved off of no longer contains a unit
+	moveParams = [moves[moves.length-1][0],moves[moves.length-1][1],curr,moves.length-1]; //get the first move ready for execute moves
+	clearMoveable(); //no longer need to show moveable squares for same reason
+	executeMoves();
+}
+
+function getDestination() {
+	var dest = [6,11];
+	var currDest = [moveableSpaces[0].x,moveableSpaces[0].y];
+	
+	for (var i = 0; i < moveableSpaces.length; i++) {
+		if (Math.abs(moveableSpaces[i].x - dest[0]) + Math.abs(moveableSpaces[i].y - dest[1]) <
+			Math.abs(currDest[0] - dest[0]) + Math.abs(currDest[1] - dest[1])) {
+				currDest = [moveableSpaces[i].x,moveableSpaces[i].y];
 		}
 	}
+	return currDest;
 }
 
 function clearMoveable() { //resets all the array used in movement functions
