--- a/Adventure.html
+++ b/Adventure.html
@@ -145,6 +145,7 @@ var currentEnemy;
 var curr;
 var enemiesMoving;
 var dest;
+var enemyGold;
 
 //These objects store the stats for each unit, as well as the display images, and their cost to produce
 var infantry = {attack: 3, defense: 3, movement: 3, sight: 3, image: "soldier.png", movedImage: "soldierMoved.png", enemyImage: "soldierEnemy.png", name: "Light Infantry", cost: 300};
@@ -160,7 +161,9 @@ function startGame() { //called when the game starts
 	frame = 0; 
 	turnNumber = 1;
 	gold = 500;
+	enemyGold = 0;
 	enemiesMoving = 0;
+	currentEnemy = 0;
 	
 	if (boardRows * spaceSize > window.innerWidth) //if the board is wider than the screen
 		boardX = parseInt(window.innerWidth/spaceSize)*spaceSize; //make the display area however many squares we can fit on the screen 
@@ -553,7 +556,7 @@ function updateGameArea() { //Called to draw each new frame on the canvas
 			turnNumber++; //another turn has passed
 			turnText.text = "DAY " + turnNumber; //update the turn card to show this
 			turnOver = 0; //and the turn is no longer over
-			enemyTurn(); //now its the enemy turn NOTE: temporarily disabled
+			enemyTurn();
 		}
 	}
 	
@@ -574,13 +577,15 @@ function updateGameArea() { //Called to draw each new frame on the canvas
 			hpToSet = [];
 		}
 	}
-	
+
 	if (delay < 0 && enemiesMoving && currentEnemy < enemyUnits.length) {
 		executeMoves();
 	}
-	else if (currentEnemy == enemyUnits.length)
-		enemiesMoving = 0;
-	
+	else if (currentEnemy == enemyUnits.length) {
+		refreshEnemyIncome();
+		buildEnemyUnits();
+		enemiesMoving = 0; //ends enemy turn
+	}
 	if (turnCardOn) { //If we're showing the turn card
 		turnCard.update(); //Re-draw it
 		turnText.update();
@@ -1133,6 +1138,39 @@ function refreshIncome() { //checks how many buildings the player controls and a
 		}
 	}
 	incomeText.text = "Income: " + income;
+}
+
+function refreshEnemyIncome() { //checks how many buildings the enemy controls and adds them to gold
+	for (var i = 0; i < boardRows; i++) {
+		for (var j = 0; j < boardCols; j++) {
+				if (board[i][j] > 8)
+					enemyGold+=100;
+		}
+	}
+}
+
+function buildEnemyUnits() { //controls what units the enemy builds and where
+	var x; 
+	var y;
+	
+	for (var i = 0; i < boardRows; i++) {
+		for (var j = 0; j < boardCols; j++) {
+				if (board[i][j] == 10 && entityLayer[i][j] == -1){ //find a non-occupied factory
+					x = i;
+					y = j;
+				}	
+		}
+	}
+	
+	if (enemyGold > 600) {
+		newEnemyUnit(x, y, 1);
+		enemyGold -= 600;
+	}
+	
+	else {
+		newEnemyUnit(x, y, 0);
+		enemyGold -= 300;
+	}
 }
 
 function enemyTurn () { //Called when the enemy turn starts
