--- a/Adventure.html
+++ b/Adventure.html
@@ -151,7 +151,7 @@ var enemyGold;
 var infantry = {attack: 3, defense: 3, movement: 3, sight: 3, range: 1, image: "art/soldier.png", movedImage: "art/soldierMoved.png", enemyImage: "art/soldierEnemy.png", name: "Light Infantry", cost: 300};
 var heavyInfantry = {attack: 4, defense: 5, movement: 2, sight: 2, range: 1, image: "art/knight.png", movedImage: "art/knightMoved.png", enemyImage: "art/knightEnemy.png", name: "Heavy Infantry", cost: 600};
 var cavalry = {attack: 5, defense: 2, movement: 4, sight: 4, range: 1, image: "art/cavalry.png", movedImage: "art/cavalryMoved.png", enemyImage: "art/cavalryEnemy.png", name: "Cavalry", cost: 1000};
-var archer = {attack: 4, defense: 1, movement: 3, sight: 3, range: 2, image: "art/archer.png", movedImage: "art/archer.png", enemyImage: "art/archer.png", name: "Archer", cost: 500};
+var archer = {attack: 4, defense: 1, movement: 3, sight: 3, range: 2, image: "art/archer.png", movedImage: "art/archerMoved.png", enemyImage: "art/archerEnemy.png", name: "Archer", cost: 500};
 
 var units = [infantry, heavyInfantry, cavalry,archer];
 //current attack function doesn't support long range (yet)
@@ -203,7 +203,8 @@ function startGame() { //called when the game starts
 	
 	newEnemyUnit(10, 4, 1); //same as newPlayer unit but for enemies, may condense both into a single function "newUnit" later on
 	newEnemyUnit(6, 4, 0);
-	newEnemyUnit(9, 3, 0);
+	newEnemyUnit(9, 3, 3);
+    newEnemyUnit(4, 7, 0);
 	newEnemyUnit(10, 2, 2);
 	
 	//This section is the decleration of all the visual elements we will need to render on the canvas
@@ -339,9 +340,6 @@ function mapTerrain() { //edit this to edit terrain (aka place mountain, change 
 	board[7][5] = 8;
 	board[7][7] = 8;
 	board[6][6] = 7;
-    
-    board[5][4] = 3;
-    board[6][5] = 3;
 }
 
 function mapStructures() { //Fills structureMap[] to represent building locations
@@ -956,7 +954,8 @@ function getAttackable(x,y) {
         }
     }
     else {
-        attackableSpaces = getRangedAttackable(x,y,selectedUnit);
+        if(unitMoved[selectedUnit] == playerUnits[selectedUnit].stats.movement)
+            attackableSpaces = getRangedAttackable(x,y,selectedUnit);
     }
 }
 
